[package]
name = "bitclient"
version = "0.1.0"
authors = ["fixer <fixer3838@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "^0.2.0"
serde_bytes = "0.11"
lava_torrent = "0.4.0"

[dependencies.bencode]

git = "https://github.com/arjantop/rust-bencode.git"
